workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__creates_an_empty_convex_hull_from_0_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: "ConvexHull::from_line_segments([].iter())"
---
{
  "points": []
}
