workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__finds_line_segments_for_vector_terminal_points_left.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: line_segment
---
{
  "start": {
    "x": -0.7071067811865475,
    "y": 0.7071067811865476,
    "index": 1
  },
  "end": {
    "x": -0.7071067811865477,
    "y": -0.7071067811865474,
    "index": 2
  }
}
