workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__finds_line_segments_for_vector_terminal_points_right.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: line_segment
---
{
  "start": {
    "x": 0.70710677,
    "y": -0.70710677,
    "index": 3
  },
  "end": {
    "x": 0.70710677,
    "y": 0.70710677,
    "index": 0
  }
}
