workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__finds_line_segments_for_vector_terminal_points_top.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: "convex_hull.find_line_segment(Point::default().with_x(0.0).with_y(-1.0).rotate(f64::consts::PI\n* 0.0, None))"
---
{
  "start": {
    "x": -0.7071067811865477,
    "y": -0.7071067811865474,
    "index": 2
  },
  "end": {
    "x": 0.7071067811865474,
    "y": -0.7071067811865477,
    "index": 3
  }
}
