workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__orders_points_correctly_from_dodecagon_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: convex_hull
---
{
  "points": [
    {
      "x": 0.25882,
      "y": -0.96593,
      "index": 9
    },
    {
      "x": 0.70711,
      "y": -0.70711,
      "index": 10
    },
    {
      "x": 0.96593,
      "y": -0.25882,
      "index": 11
    },
    {
      "x": 0.96593,
      "y": 0.25882,
      "index": 0
    },
    {
      "x": 0.70711,
      "y": 0.70711,
      "index": 1
    },
    {
      "x": 0.25882,
      "y": 0.96593,
      "index": 2
    },
    {
      "x": -0.25882,
      "y": 0.96593,
      "index": 3
    },
    {
      "x": -0.70711,
      "y": 0.70711,
      "index": 4
    },
    {
      "x": -0.96593,
      "y": 0.25882,
      "index": 5
    },
    {
      "x": -0.96593,
      "y": -0.25882,
      "index": 6
    },
    {
      "x": -0.70711,
      "y": -0.70711,
      "index": 7
    },
    {
      "x": -0.25882,
      "y": -0.96593,
      "index": 8
    }
  ]
}
