workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__orders_points_correctly_from_octagon_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: convex_hull
---
{
  "points": [
    {
      "x": 0.5,
      "y": 0.86603,
      "index": 1
    },
    {
      "x": -0.5,
      "y": 0.86603,
      "index": 2
    },
    {
      "x": -1.0,
      "y": -0.0,
      "index": 3
    },
    {
      "x": -0.5,
      "y": -0.86603,
      "index": 4
    },
    {
      "x": 0.5,
      "y": -0.86603,
      "index": 5
    },
    {
      "x": 1.0,
      "y": 0.0,
      "index": 0
    }
  ]
}
