workspaces/tilings/src-rust/tiling/src/geometry/snapshots/tiling__geometry__convex_hull__tests__orders_points_correctly_from_square_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: convex_hull
---
{
  "points": [
    {
      "x": 0.70711,
      "y": -0.70711,
      "index": 3
    },
    {
      "x": 0.70711,
      "y": 0.70711,
      "index": 0
    },
    {
      "x": -0.70711,
      "y": 0.70711,
      "index": 1
    },
    {
      "x": -0.70711,
      "y": -0.70711,
      "index": 2
    }
  ]
}
